[build-system]
requires = ["setuptools", "setuptools_scm>=8.1"]
build-backend = "setuptools.build_meta"

[project]
name = "ert"
authors = [{ name = "Equinor ASA", email = "fg_sib-scout@equinor.com" }]
description = "Ensemble based Reservoir Tool (ERT)"
requires-python = ">=3.11, <3.14"
readme = "README.md"
license = { text = "GPL-3.0" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Other Environment",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
]
dynamic = ["version"]
dependencies = [
    "aiohttp",
    "colorama",
    "cryptography",
    "decorator",
    "dnspython >= 2",
    "fastapi",
    "filelock",
    "httpx",
    "humanize",
    "iterative_ensemble_smoother>=0.4.0",
    "jinja2 >= 2.10",
    "lark",
    "lxml",
    "matplotlib",
    "netCDF4",
    "numpy",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-instrumentation-threading",
    "orjson",
    "packaging",
    "pandas",
    "pluggy>=1.3.0",
    "polars>=1.32.3",
    "progressbar2",
    "psutil",
    "pyarrow", # extra dependency for pandas (parquet)
    "pydantic > 2",
    "python-dateutil",
    "python-multipart", # extra dependency for fastapi
    "pyyaml",
    "pyzmq",
    "pyqt6",
    "requests",
    "resfo",
    "ropt-dakota>=0.24,<0.25",
    "ropt[pandas]>=0.24,<0.25",
    "ruamel.yaml",
    "scipy >= 1.10.1",
    "seaborn",
    "tables", # extra dependency for pandas (hdf5)
    "tabulate",
    "tqdm>=4.62.0",
    "typing_extensions>=4.5",
    "uvicorn >= 0.17.0",
    "websockets",
    "xarray",
    "xtgeo >= 3.3.0",
    "networkx",
    "graphite-maps",
    "surfio>=0.0.11",
    "fastexcel>=0.14.0", # extra dependency for polars (excel)
    "websockets",
]

[project.scripts]
ert = "ert.__main__:main"
"fm_dispatch.py" = "_ert.forward_model_runner.fm_dispatch:main"
everest = "everest.bin.main:start_everest"
everserver = "everest.detached.everserver:main"

[project.urls]
Repository = "https://github.com/equinor/ert"

[project.optional-dependencies]
dev = [
    "furo",
    "hypothesis!=6.102.0,!=6.112.3,>=6.85",
    "jsonpath_ng",
    "jupyter",
    "jupytext",
    "nbsphinx",
    "oil_reservoir_synthesizer",
    "pytest-asyncio",
    "pytest-benchmark",
    "pytest-cov",
    "pytest-memray",
    "pytest-mock",
    "pytest-mpl",
    "pytest-qt",
    "pytest-raises",
    "pytest-rerunfailures!=16.0",
    "pytest-snapshot",
    "pytest-timeout",
    "pytest-xdist",
    "pytest>6",
    "resdata",
    "resfo",
    "rust-just",
    "scikit-image",
    "sphinx",
    "sphinx-argparse",
    "sphinx-autoapi",
    "sphinx-copybutton",
    "sphinxcontrib.datatemplates",
    "json-schema-for-humans",
    "xlsxwriter>=3.2.3",
]
style = ["pre-commit"]
types = [
    "mypy",
    "types-lxml",
    "types-requests",
    "types-PyYAML",
    "types-python-dateutil",
    "types-decorator",
    "types-docutils",
    "types-tqdm",
    "types-psutil",
    "types-setuptools",
    "types-networkx",
]

[tool.setuptools]
package-dir = { "" = "src" }
platforms = ["all"]

[tool.setuptools.package-data]
everest = ["data/**/*", "*.tmpl", "detached/jobs/everserver"]


[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
norecursedirs = [
    "*.egg",
    ".*",
    "tests/ert/unit_tests/gui/plottery/baseline",
    "tests/ert/unit_tests/storage/snapshots",
    "tests/ert/unit_tests/snapshots",
    "tests/everest/snapshots",
    "tests/everest/test_data",
    "tests/ert/unit_tests/scheduler/bin",
]
markers = [
    "memory_test",
    "integration_test",
    "out_of_memory",
    "quick_only",
    "requires_eclipse",
    "requires_window_manager",
    "script",
    "slow",
    "skip_mac_ci",
]
log_cli = "false"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
timeout = 360

[tool.setuptools_scm]
write_to = "src/ert/shared/version.py"

[tool.ruff]
src = ["src"]
line-length = 88

[tool.ruff.lint]
select = [
    "A",     # flake8-builtins
    "E",     # pycodestyle
    "W",     # pycodestyle
    "I",     # isort
    "B",     # flake-8-bugbear
    "G",     # logging-format
    "LOG",   # logging
    "SIM",   # flake-8-simplify
    "F",     # pyflakes
    "FURB",  # refurb
    "PL",    # pylint
    "NPY",   # numpy specific rules
    "C4",    # flake8-comprehensions
    "ASYNC", # flake8-async
    "RSE",   # flake8-raise
    "RUF",   # ruff specific rules
    "UP",    # pyupgrade
    "ICN",   # flake8-import-conventions
    "PIE",   # flake8-pie
    "ANN204", # return type special methods
    "TRY203",
    "TRY300",
]
preview = true
ignore = [
    "G004",    # logging-f-string
    "PLW2901", # redefined-loop-name
    "PLR2004", # magic-value-comparison
    "PLR0915", # too-many-statements
    "PLR0912", # too-many-branches
    "PLR0911", # too-many-return-statements
    "PLC2701", # import-private-name
    "PLR0914", # too-many-locals
    "PLR6301", # no-self-use
    "PLW1641", # eq-without-hash
    "PLR0904", # too-many-public-methods
    "PLR1702", # too-many-nested-blocks
]

# Allow EN DASH (U+2013)
allowed-confusables = ["–"]

[tool.ruff.lint.extend-per-file-ignores]
"tests/*" = [
    "PLW0603", # global-statement
    "RUF029",  # unused-async
    "RUF018",  # assignment-in-assert
    "RUF006",  # asyncio-dangling-task
    "PLW1508", # Invalid type of environment variable default
    "RUF052",  # used-dummy-variable
    "RUF045",  # implicit-class-var-in-dataclass
]
"src/ert/dark_storage/json_schema/__init__.py" = ["F401"]
"src/ert/dark_storage/*" = ["RUF029"] # unused-async
"*.ipynb" = ["E402"]


[tool.ruff.lint.pylint]
max-args = 20
allow-dunder-method-names = [
    "__default_token__",
    "__get_pydantic_core_schema__",
    "__get_pydantic_json_schema__",
]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends"]

[tool.pyright]
include = ["src"]
exclude = ["tests"]
reportMissingImports = "error"
typeCheckingMode = "standard"
pythonVersion = "3.11"

[tool.pyright.defineConstant]
PYSIDE6 = false
PYQT5 = false
PYSIDE2 = false
PYQT6 = true

[tool.uv]
fork-strategy = "requires-python"
