[build-system]
requires = ["setuptools", "setuptools_scm>=8.1"]
build-backend = "setuptools.build_meta"

[project]
name = "ert"
authors = [{ name = "Equinor ASA", email = "fg_sib-scout@equinor.com" }]
description = "Ensemble based Reservoir Tool (ERT)"
requires-python = ">=3.11, <3.14"
readme = "README.md"
license = "GPL-3.0-only"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Other Environment",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
]
dynamic = ["version"]
dependencies = [
    "aiohttp",
    "anyio",
    "colorama",
    "cryptography",
    "decorator",
    "dnspython >= 2",
    "fastapi",
    "fastexcel>=0.14.0", # extra dependency for polars (excel)
    "filelock",
    "graphite-maps",
    "httpx",
    "httpx-retries",
    "humanize",
    "iterative_ensemble_smoother>=0.4.0",
    "jinja2 >= 2.10",
    "lark",
    "lxml",
    "matplotlib",
    "netCDF4",
    "networkx",
    "numpy",
    "opentelemetry-api",
    "opentelemetry-instrumentation-threading",
    "opentelemetry-sdk",
    "orjson",
    "packaging",
    "pandas",
    "pluggy>=1.3.0",
    "polars>=1.32.3, <1.35",
    "progressbar2",
    "psutil",
    "pyarrow", # extra dependency for pandas (parquet)
    "pydantic > 2",
    "pyqt6 < 6.10.0",  # rhel8 https://www.riverbankcomputing.com/pipermail/pyqt/2025-October/046342.html
    "python-dateutil",
    "python-multipart", # extra dependency for fastapi
    "pyyaml",
    "pyzmq",
    "requests",
    "resfo>=5.0.0",
    "ropt-dakota>=0.25,<0.26",
    "ropt[pandas]>=0.25,<0.26",
    "ruamel.yaml",
    "scipy >= 1.10.1",
    "seaborn",
    "surfio>=0.0.11",
    "tables", # extra dependency for pandas (hdf5)
    "tabulate",
    "tqdm>=4.62.0",
    "typing_extensions>=4.5",
    "uvicorn >= 0.17.0",
    "websockets",
    "xarray",
    "xtgeo >= 3.3.0",
    "resfo-utilities>=0.5.0",
]

[project.scripts]
ert = "ert.__main__:main"
"fm_dispatch.py" = "_ert.forward_model_runner.fm_dispatch:main"
everest = "everest.bin.main:start_everest"
everserver = "everest.detached.everserver:main"

[project.urls]
Repository = "https://github.com/equinor/ert"

[project.optional-dependencies]
dev = [
    "furo",
    "hypothesis!=6.102.0,!=6.112.3,>=6.85",
    "jsonpath_ng",
    "jupyter",
    "jupytext",
    "nbsphinx",
    "oil_reservoir_synthesizer",
    "pytest-asyncio",
    "pytest-benchmark",
    "pytest-cov",
    "pytest-memray",
    "pytest-mock",
    "pytest-mpl",
    "pytest-qt",
    "pytest-raises",
    "pytest-rerunfailures!=16.0",
    "pytest-snapshot",
    "pytest-timeout",
    "pytest-xdist",
    "pytest-durations",
    "pytest>6",
    "resdata",
    "rust-just",
    "scikit-image",
    "sphinx",
    "sphinx-argparse",
    "sphinx-autoapi",
    "sphinx-copybutton",
    "sphinxcontrib.datatemplates",
    "json-schema-for-humans",
    "xlsxwriter>=3.2.3",
    "resfo-utilities[testing]>=0.5.0",
]
style = ["pre-commit"]
types = [
    "mypy",
    "types-lxml",
    "types-requests",
    "types-PyYAML",
    "types-python-dateutil",
    "types-decorator",
    "types-docutils",
    "types-tqdm",
    "types-psutil",
    "types-setuptools",
    "types-networkx",
]

[tool.setuptools]
package-dir = { "" = "src" }
platforms = ["all"]

[tool.setuptools.package-data]
ert = [
    "gui/resources/**/*",
    "resources/**/*",
    "logging/logger.conf",
    "logging/storage_log.conf",
]
everest = ["data/**/*", "*.tmpl", "detached/jobs/everserver"]


[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
norecursedirs = [
    "*.egg",
    ".*",
    "snapshots",
    "baseline",
    "tests/everest/test_data",
    "tests/ert/unit_tests/scheduler/bin",
    "tests/ert/unit_tests/gui/tools/file",
]
markers = [
    "memory_test",
    "creates_tmpdir",
    "integration_test",
    "out_of_memory",
    "quick_only",
    "requires_eclipse",
    "requires_window_manager",
    "script",
    "slow",
    "skip_mac_ci",
]
test_paths = ["tests"]
log_cli = "false"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
timeout = 360
session_timeout = 1800
timeout_func_only = true # Do not apply timeout to fixtures which can be slow but cached

[tool.setuptools_scm]
version_file = "src/ert/shared/version.py"
# Fallback needed due to https://github.com/dependabot/dependabot-core/issues/12340
fallback_version = "0.0.0"

[tool.ruff]
src = ["src"]
line-length = 88

[tool.ruff.lint]
select = [
    "A",     # flake8-builtins
    "AIR",
    "ANN204", # return type special methods
    "ASYNC", # flake8-async
    "B",     # flake-8-bugbear
    "C4",    # flake8-comprehensions
    "DJ",
    "E",     # pycodestyle
    "EXE",
    "F",     # pyflakes
    "FA",
    "FAST",
    "FIX",
    "FURB",  # refurb
    "G",     # logging-format
    "I",     # isort
    "ICN",   # flake8-import-conventions
    "INT",
    "ISC",
    "LOG",   # logging
    "NPY",   # numpy specific rules
    "PD",
    "PIE",   # flake8-pie
    "PL",    # pylint
    "PLE",
    "PYI",
    "Q",
    "RSE",
    "RSE",   # flake8-raise
    "RUF",   # ruff specific rules
    "SIM",   # flake-8-simplify
    "SLOT",
    "TD",
    "TRY203",
    "TRY300",
    "UP",    # pyupgrade
    "W",     # pycodestyle
    "YTT"
]
preview = true
ignore = [
    "G004",    # logging-f-string
    "PLW2901", # redefined-loop-name
    "PLR2004", # magic-value-comparison
    "PLR0915", # too-many-statements
    "PLR0912", # too-many-branches
    "PLR0911", # too-many-return-statements
    "PLC2701", # import-private-name
    "PLR0914", # too-many-locals
    "PLR6301", # no-self-use
    "PLW1641", # eq-without-hash
    "PLR0904", # too-many-public-methods
    "PLR1702", # too-many-nested-blocks
]

# Allow EN DASH (U+2013)
allowed-confusables = ["–"]

[tool.ruff.lint.extend-per-file-ignores]
"tests/*" = [
    "PLW0603", # global-statement
    "RUF029",  # unused-async
    "RUF018",  # assignment-in-assert
    "RUF006",  # asyncio-dangling-task
    "PLW1508", # Invalid type of environment variable default
    "RUF052",  # used-dummy-variable
    "RUF045",  # implicit-class-var-in-dataclass
    "ASYNC240", # blocking-path-method-in-async-function
]
"src/ert/dark_storage/json_schema/__init__.py" = ["F401"]
"src/ert/dark_storage/*" = ["RUF029"] # unused-async
"*.ipynb" = ["E402"]


[tool.ruff.lint.pylint]
max-args = 20
allow-dunder-method-names = [
    "__default_token__",
    "__get_pydantic_core_schema__",
    "__get_pydantic_json_schema__",
]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends"]

[tool.pyright]
include = ["src"]
exclude = ["tests"]
reportMissingImports = "error"
typeCheckingMode = "standard"
pythonVersion = "3.11"

[tool.pyright.defineConstant]
PYSIDE6 = false
PYQT5 = false
PYSIDE2 = false
PYQT6 = true

[tool.uv]
fork-strategy = "requires-python"
